test-harness/src/snapshots/toolchain__enum-repr into-coq.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Translate:
      backend: coq
  info:
    name: enum-repr
    manifest: enum-repr/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: true
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0
stderr = 'Finished `dev` profile [unoptimized + debuginfo] target(s) in XXs'

[stdout]
diagnostics = []

[stdout.files]
"Enum_repr.v" = '''
(* File automatically generated by Hacspec *)
From Coq Require Import ZArith.
Require Import List.
Import List.ListNotations.
Open Scope Z_scope.
Open Scope bool_scope.
Require Import Ascii.
Require Import String.
Require Import Coq.Floats.Floats.
From RecordUpdate Require Import RecordSet.
Import RecordSetNotations.
From Core Require Import Core.



Definition discriminant_EnumWithRepr_ExplicitDiscr1 : t_u16 :=
  (1 : t_u16).

Definition discriminant_EnumWithRepr_ExplicitDiscr2 : t_u16 :=
  (5 : t_u16).

Inductive t_EnumWithRepr : Type :=
| EnumWithRepr_ExplicitDiscr1
| EnumWithRepr_ExplicitDiscr2
| EnumWithRepr_ImplicitDiscrEmptyTuple
| EnumWithRepr_ImplicitDiscrEmptyStruct.
Arguments EnumWithRepr_ExplicitDiscr1.
Arguments EnumWithRepr_ExplicitDiscr2.
Arguments EnumWithRepr_ImplicitDiscrEmptyTuple.
Arguments EnumWithRepr_ImplicitDiscrEmptyStruct.

Definition t_EnumWithRepr_cast_to_repr (x : t_EnumWithRepr) : t_u16 :=
  match x with
  | EnumWithRepr_ExplicitDiscr1 =>
    discriminant_EnumWithRepr_ExplicitDiscr1
  | EnumWithRepr_ExplicitDiscr2 =>
    discriminant_EnumWithRepr_ExplicitDiscr2
  | EnumWithRepr_ImplicitDiscrEmptyTuple =>
    Add_f_add (discriminant_EnumWithRepr_ExplicitDiscr2) ((1 : t_u16))
  | EnumWithRepr_ImplicitDiscrEmptyStruct =>
    Add_f_add (discriminant_EnumWithRepr_ExplicitDiscr2) ((2 : t_u16))
  end.

(* NotImplementedYet *)

Definition f '(_ : unit) : t_u32 :=
  let v__x := cast (Add_f_add (discriminant_EnumWithRepr_ExplicitDiscr2) ((0 : t_u16))) in
  Add_f_add (cast (t_EnumWithRepr_cast_to_repr (EnumWithRepr_ImplicitDiscrEmptyTuple))) (cast (t_EnumWithRepr_cast_to_repr (EnumWithRepr_ImplicitDiscrEmptyStruct))).

Definition ff__CONST : t_u16 :=
  cast (Add_f_add (discriminant_EnumWithRepr_ExplicitDiscr1) ((0 : t_u16))).

Definition get_casted_repr (x : t_EnumWithRepr) : t_u64 :=
  cast (t_EnumWithRepr_cast_to_repr (x)).

Definition get_repr (x : t_EnumWithRepr) : t_u16 :=
  t_EnumWithRepr_cast_to_repr (x).
'''
_CoqProject = '''
-R ./ TODO
-arg -w
-arg all

Enum_repr.v'''
