test-harness/src/snapshots/toolchain__include-flag into-coq.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Translate:
      backend: coq
  info:
    name: include-flag
    manifest: cli/include-flag/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: false
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0

[stdout]
diagnostics = []

[stdout.files]
"Include_flag.v" = '''
(* File automatically generated by Hacspec *)
From Coq Require Import ZArith.
Require Import List.
Import List.ListNotations.
Open Scope Z_scope.
Open Scope bool_scope.
Require Import Ascii.
Require Import String.
Require Import Coq.Floats.Floats.
From RecordUpdate Require Import RecordSet.
Import RecordSetNotations.
From Core Require Import Core.



Record t_Foo : Type :=
  {
  }.
Arguments Build_t_Foo.
#[export]
Notation "'Foo'" := Build_t_Foo.

Class t_Trait (v_Self : Type) : Type :=
  {
  }.
Arguments t_Trait (_).

Instance t_Trait_254780795 : t_Trait ((t_Foo)) :=
  {
  }.

(* NotImplementedYet *)

Definition main_a_a '(_ : unit) : unit :=
  tt.

Definition main_a_b '(_ : unit) : unit :=
  tt.

Definition main_a_c '(_ : unit) : unit :=
  tt.

Definition main_a `{v_T : Type} `{t_Sized (v_T)} `{t_Trait (v_T)} (x : v_T) : unit :=
  let _ := main_a_a (tt) in
  let _ := main_a_b (tt) in
  let _ := main_a_c (tt) in
  tt.

Definition main_b_a '(_ : unit) : unit :=
  tt.

Definition main_b_b '(_ : unit) : unit :=
  tt.

Definition main_b_c '(_ : unit) : unit :=
  tt.

Definition main_b '(_ : unit) : unit :=
  let _ := main_b_a (tt) in
  let _ := main_b_b (tt) in
  let _ := main_b_c (tt) in
  tt.

Definition main_c_a '(_ : unit) : unit :=
  tt.

Definition main_c_b '(_ : unit) : unit :=
  tt.

Definition main_c_c '(_ : unit) : unit :=
  tt.

Definition main_c '(_ : unit) : unit :=
  let _ := main_c_a (tt) in
  let _ := main_c_b (tt) in
  let _ := main_c_c (tt) in
  tt.

Definition main '(_ : unit) : unit :=
  let _ := main_a (Build_t_Foo) in
  let _ := main_b (tt) in
  let _ := main_c (tt) in
  tt.
'''
_CoqProject = '''
-R ./ TODO
-arg -w
-arg all

Include_flag.v'''
