test-harness/src/snapshots/toolchain__reordering into-coq.snap
---
source: test-harness/src/harness.rs
expression: snapshot
info:
  kind:
    Translate:
      backend: coq
  info:
    name: reordering
    manifest: reordering/Cargo.toml
    description: ~
  spec:
    optional: false
    broken: false
    issue_id: ~
    positive: true
    snapshot:
      stderr: false
      stdout: true
    include_flag: ~
    backend_options: ~
---
exit = 0

[stdout]
diagnostics = []

[stdout.files]
"Reordering.v" = '''
(* File automatically generated by Hacspec *)
From Coq Require Import ZArith.
Require Import List.
Import List.ListNotations.
Open Scope Z_scope.
Open Scope bool_scope.
Require Import Ascii.
Require Import String.
Require Import Coq.Floats.Floats.
From RecordUpdate Require Import RecordSet.
Import RecordSetNotations.
From Core Require Import Core.



Inductive t_Foo : Type :=
| Foo_A
| Foo_B.
Arguments Foo_A.
Arguments Foo_B.

Record t_Bar : Type :=
  {
    Bar_0 : t_Foo;
  }.
Arguments Build_t_Bar.
Arguments Bar_0.
#[export] Instance settable_t_Bar : Settable _ :=
  settable! (Build_t_Bar) <Bar_0>.
Notation "'Bar'" := Build_t_Bar.

Definition t_Foo_cast_to_repr (x : t_Foo) : t_isize :=
  match x with
  | Foo_A =>
    (0 : t_isize)
  | Foo_B =>
    (1 : t_isize)
  end.

(* NotImplementedYet *)

Definition f '(_ : t_u32) : t_Foo :=
  Foo_A.

Definition g '(_ : unit) : t_Bar :=
  Build_t_Bar (f ((32 : t_u32))).

Definition no_dependency_1_ '(_ : unit) : unit :=
  tt.

Definition no_dependency_2_ '(_ : unit) : unit :=
  tt.
'''
_CoqProject = '''
-R ./ TODO
-arg -w
-arg all

Reordering.v'''
